--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
 	<string name="app_name">Pac Man Maps</string>
-	<string name="action_settings">Settings</string>
+	<string name="new_game_label">New Game</string>
+	<string name="how_to_play_label">How To Play</string>
+	<string name="about_label">About</string>
+	<string name="settings">Settings</string>
+
 </resources>
