added About class

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 	<string name="settings_label">Settings</string>
 	<string name="action_settings">Action Settings</string>
 	<string name="title_activity_maps">Idk</string>
+	<string name="about_text">created by the hacker squad at nwhacks :D</string>
+	<
 </resources>
